--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
   </div>
 
   <canvas id="canvas" width="720" height="420"></canvas>
+
+<!-- Grafik -->
+<div style="display:flex;gap:20px;margin-top:20px;flex-wrap:wrap;justify-content:center">
+  <canvas id="graphXY" width="340" height="240"></canvas>
+  <canvas id="graphVT" width="340" height="240"></canvas>
+</div>
 </div>
 
 <script>
@@ -75,6 +81,7 @@ const canvas=document.getElementById('canvas');
 const ctx=canvas.getContext('2d');
 const g=9.8;
 let animationId;
+let dataX=[], dataY=[], dataT=[], dataV=[];
 
 function drawCourt(){
   ctx.fillStyle='#555';ctx.fillRect(560,120,10,180);
@@ -85,6 +92,7 @@ function drawCourt(){
 }
 
 function startSimulation(){
+  dataX=[]; dataY=[]; dataT=[]; dataV=[];
   cancelAnimationFrame(animationId);
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
@@ -117,7 +125,12 @@ function startSimulation(){
     y += vy*dt;
     t += dt;
 
-    if(y<0) return;
+    dataX.push(x);
+    dataY.push(y);
+    dataT.push(t);
+    dataV.push(Math.sqrt(vx*vx + vy*vy));
+
+    if(y<0){ drawGraphs(); return; }
 
     const drawX=60+x*scale;
     const drawY=360-y*scale;
@@ -141,6 +154,34 @@ function startSimulation(){
     `Tinggi maksimum (teori): <b>${H.toFixed(2)} m</b>`;
 
   step();
+}
+
+function drawGraphs(){
+  const gxy=document.getElementById('graphXY').getContext('2d');
+  const gvt=document.getElementById('graphVT').getContext('2d');
+
+  // Grafik x-y
+  gxy.clearRect(0,0,340,240);
+  gxy.fillText('Lintasan (x,y)',10,15);
+  gxy.beginPath();
+  for(let i=0;i<dataX.length;i++){
+    const px=20+dataX[i]*10;
+    const py=220-dataY[i]*10;
+    if(i===0) gxy.moveTo(px,py); else gxy.lineTo(px,py);
+  }
+  gxy.strokeStyle='blue'; gxy.stroke();
+
+  // Grafik v-t
+  gvt.clearRect(0,0,340,240);
+  gvt.fillText('Kecepatan vs Waktu',10,15);
+  gvt.beginPath();
+  for(let i=0;i<dataT.length;i++){
+    const px=20+dataT[i]*40;
+    const py=220-dataV[i]*5;
+    if(i===0) gvt.moveTo(px,py); else gvt.lineTo(px,py);
+  }
+  gvt.strokeStyle='red'; gvt.stroke();
+}
 }
 
 // shortcut
